--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -23,16 +23,18 @@
       <div class="wave -two"></div>
       <div class="wave -three"></div>
       <div class="weathercon">
-        <i class="fas fa-sun" style="color: #d36326"></i>
+        <i class="fas fa-sun" style="color: #ffe87c"></i>
       </div>
       <div class="info">
         <h2 class="location">
           <i class="fa-solid fa-street-view"></i>
           Islamabad, PK
         </h2>
-        <p class="date">MONDAY | SEP 12 | 12:34</p>
+        <p id="date">MONDAY | SEP 12 | 12:34</p>
         <h1 class="temp">25 &deg;C | 77 &deg;F</h1>
       </div>
     </div>
+
+    <script src="./main.js"></script>
   </body>
 </html>
