--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -14,7 +14,195 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./card.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Quicksand:wght@400;600;700&display=swap");
+
+      * {
+        padding: 0;
+        margin: 0;
+        font-family: "Quicksand", sans-serif;
+      }
+
+      body {
+        background: #f3f2ef;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        height: 100vh;
+        width: 100vw;
+      }
+
+      html,
+      body {
+        height: 100%;
+      }
+
+      html {
+        background: #eee;
+      }
+
+      .box {
+        width: 25vw;
+        height: 60vh;
+        border-radius: 5px;
+        box-shadow: 0 2px 30px rgba(black, 0.2);
+        background: #a5bbdd;
+        position: relative;
+        overflow: hidden;
+        transform: translate3d(0, 0, 0);
+        min-width: 200px;
+        min-height: 350px;
+      }
+
+      .wave {
+        opacity: 0.3;
+        position: absolute;
+        top: 120%;
+        left: 50%;
+        background: white;
+        width: 500px;
+        height: 500px;
+        margin-left: -250px;
+        margin-top: -250px;
+        transform-origin: 50% 48%;
+        border-radius: 43%;
+        animation: drift 3000ms infinite linear;
+        z-index: 1;
+      }
+
+      .wave.-three {
+        animation: drift 5000ms infinite linear;
+        z-index: 2 !important;
+        opacity: 0.2;
+      }
+
+      .wave.-two {
+        animation: drift 7000ms infinite linear;
+        opacity: 0.1;
+        z-index: 3 !important;
+      }
+
+      .box:after {
+        content: "";
+        display: block;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 11;
+        transform: translate3d(0, 0, 0);
+      }
+
+      @keyframes drift {
+        from {
+          transform: rotate(0deg);
+        }
+        from {
+          transform: rotate(360deg);
+        }
+      }
+
+      .info {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 45%;
+        z-index: 4;
+      }
+
+      .location {
+        text-align: center;
+        font-weight: 800;
+      }
+
+      #date {
+        text-align: center;
+        margin-top: 5%;
+        color: lighten(grey, 10%);
+        font-size: 70%;
+      }
+
+      .temp {
+        margin-top: 10%;
+        text-align: center;
+      }
+
+      .weathercon {
+        height: 55%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 3em;
+      }
+
+      .fa-street-view {
+        animation: rotates 2s linear infinite alternate;
+        color: #df2c40;
+      }
+
+      #minMax__temp {
+        text-align: center;
+      }
+
+      @keyframes rotates {
+        from {
+          transform: translateX(-0.2rem);
+        }
+
+        to {
+          transform: translateX(0.2rem);
+        }
+      }
+
+      .fa-sun {
+        animation: zoomIn 2s linear infinite alternate;
+      }
+
+      @keyframes zoomIn {
+        from {
+          transform: scale(0.9);
+        }
+        to {
+          transform: scale(1.1);
+        }
+      }
+
+      @media (max-width: 600px) {
+        .box {
+          width: 90vw;
+          height: 80vh;
+        }
+
+        .wave {
+          top: 85%;
+        }
+
+        .weathercon {
+          font-size: 5em;
+        }
+
+        .info {
+          font-size: 1.5rem;
+        }
+      }
+
+      @media (max-height: 500px) {
+        .box {
+          height: 80vh;
+        }
+
+        .wave {
+          top: 115%;
+        }
+      }
+
+      body > span {
+        width: 100vw;
+        text-align: center;
+        color: grey;
+      }
+    </style>
     <title>Weather App - Openweather api</title>
   </head>
   <body>
@@ -28,13 +216,92 @@
       <div class="info">
         <h2 class="location">
           <i class="fa-solid fa-street-view"></i>
-          Islamabad, PK
+          {%location%}, {%country%}
         </h2>
         <p id="date">MONDAY | SEP 12 | 12:34</p>
-        <h1 class="temp">25 &deg;C | 77 &deg;F</h1>
+        <h1 class="temp">{%temperature%}&deg;C</h1>
+        <p id="minMax__temp">Min {%minTemp%}:&deg;C | Max {%maxTemp%}:&deg;C</p>
       </div>
     </div>
 
-    <script src="./main.js"></script>
+    <script>
+      let weathercon = document.getElementById("weathercon");
+      let currentDate = document.getElementById("date");
+
+      let temperatureStatus = "{%tempstate%}";
+
+      if (temperatureStatus == "Clear") {
+        weathercon.innerHTML =
+          "<i class='fas fa-sun' style='color: #ffe87c'></i>";
+      } else if (temperatureStatus == "Clouds") {
+        weathercon.innerHTML =
+          "<i class='fa-solid fa-cloud' style='color: #f1f2f6'></i>";
+      } else if (temperatureStatus == "Rainy") {
+        weathercon.innerHTML =
+          "<i class='fa-solid fa-cloud-rain' style='color: #a4b0be'></i>";
+      }
+
+      // Function for getting the day
+      const getCurrentDate = () => {
+        const date = new Date();
+        let weekDay = new Array(7);
+
+        weekDay[0] = "sunday";
+        weekDay[1] = "Monday";
+        weekDay[2] = "Tuesday";
+        weekDay[3] = "Wednesday";
+        weekDay[4] = "Thursday";
+        weekDay[5] = "Friday";
+        weekDay[6] = "Saturday";
+
+        return weekDay[date.getDay()];
+      };
+
+      // function for getting month, date and time
+      const getCurrentDay = () => {
+        // Get months in string
+        const months = [
+          "January",
+          "February",
+          "March",
+          "April",
+          "May",
+          "June",
+          "July",
+          "August",
+          "September",
+          "October",
+          "November",
+          "December",
+        ];
+
+        const currentDay = new Date();
+        const day = currentDay.getDate();
+        const month = months[currentDay.getMonth()];
+
+        const minutes = currentDay.getMinutes();
+        const hour = currentDay.getHours();
+
+        //   Getting PM & AM
+        clockCycle = "AM";
+
+        if (hour > 11) {
+          clockCycle = "PM";
+
+          if (hour > 12) {
+            // it means hour convert into 1pm not 13pm
+            hour = hour - 12;
+          }
+        }
+
+        if (minutes < 10) {
+          minutes = "0" + minutes;
+        }
+
+        return `${month} ${day} | ${hour}:${minutes} ${clockCycle}`;
+      };
+
+      currentDate.innerHTML = `${getCurrentDate()} | ${getCurrentDay()}`;
+    </script>
   </body>
 </html>
